Fixing the alignment for the augments cards

--- a/static/CSS/augments.css
+++ b/static/CSS/augments.css
@@ -35,7 +35,6 @@
     width: 98%;
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 3em;
 }
 
